--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
