--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-input-multiline": "^0.3.1",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
