--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
+    "qr-code-styling": "^1.6.0-rc.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
