--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rsuite-table": "^5.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
