--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
@@ -17,6 +18,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-input-multiline": "^0.3.1",
