--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spots-fe-organizer",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -52,6 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://www.destkw.com"
+  }
 }
