--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "spots-fe-organizer",
   "version": "0.1.0",
-  "homepage": ".",
+  "proxy": "http://localhost:8000",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
