--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "spots-fe-organizer",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://destkw.com",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
