--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "homepage": ".",
   "dependencies": {
+    "@jackybaby/react-custom-qrcode": "^2.7.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
@@ -20,12 +22,15 @@
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.6.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-input-multiline": "^0.3.1",
-    "react-qr-code": "^2.0.7",
+    "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.0.0",
     "rsuite-table": "^5.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
