--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.0.0",
+    "react-toggle": "^4.1.3",
     "rsuite-table": "^5.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
